[package]
name = "ntap"
version = "0.3.0"
edition = "2021"
authors = ["shellrow <shellrow@fortnium.com>"]
description = "Real-time network utilization monitoring tool"
repository = "https://github.com/shellrow/ntap"
homepage = "https://github.com/shellrow/ntap"
documentation = "https://github.com/shellrow/ntap"
readme = "../README.md"
keywords = ["network","security","cross-platform"]
categories = ["network-programming"]
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
simplelog = "0.12"
netdev = { version = "0.30", features = ["serde"] }
nex = { version = "0.18", features = ["serde"] }
tokio = { version = "1.38" }
clap = { version = "4.5", features = ["cargo"] }
crossterm = "0.27"
anyhow = "1.0"
argh = "0.1"
rand = "0.8"
color-eyre = "0.6"
palette = "0.7"
ratatui = "0.25"
comfy-table = "7.1"
hickory-resolver = { version = "0.24" }
futures = {version = "0.3"}
netsock = { version = "0.2", features = ["serde"] }
reqwest = { version="0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
chrono = { version = "0.4", features = ["serde"] }
time = { version = "0.3", features = ["local-offset"] }
ipnet = "2.5"
ipstruct = "0.2"
home = "0.5"
bincode = "1.3"
rangemap = "1.5"

[target.'cfg(windows)'.dependencies]
indicatif = "0.16"
inquire = "0.6"
winreg = "0.50"
sha2 = "0.10"
zip = "0.6"
privilege = "0.3"

[features]
default = ["bundle"]
bundle = []

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.18.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "homebrew"]
#installers = ["shell", "homebrew", "powershell"]
# A GitHub repo to push Homebrew formulas to
tap = "shellrow/homebrew-tap-ntap"
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu"]
#targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
publish-jobs = ["homebrew"]
# Publish jobs to run in CI
pr-run-mode = "plan"
# Whether to install an updater program
install-updater = false
