[workspace]
resolver = "2"
members = [
    "ntap-db/oui",
    "ntap-db/ipv4-asn", 
    "ntap-db/ipv4-country", 
    "ntap-db/ipv6-asn", 
    "ntap-db/ipv6-country", 
    "ntap-db/tcp-service", 
    "ntap-db/udp-service", 
    "ntap-db/as", 
    "ntap-db/country", 
    "ntap",
]

[workspace.package]
version = "0.4.0"
authors = ["shellrow <shellrow@fortnium.com>"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
bincode = "1.3"
rangemap = "1.5"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.18.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
#installers = ["shell", "homebrew", "powershell"]
installers = ["shell", "homebrew"]
# A GitHub repo to push Homebrew formulas to
tap = "shellrow/homebrew-tap-ntap"
# Target platforms to build apps for (Rust target-triple syntax)
#targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu"]
# Publish jobs to run in CI
publish-jobs = ["homebrew"]
# Publish jobs to run in CI
pr-run-mode = "plan"
# Whether to install an updater program
install-updater = false
