[workspace]
resolver = "2"
members = [
    "ntap-db/oui",
    "ntap-db/ipv4-asn", 
    "ntap-db/ipv4-country", 
    "ntap-db/ipv6-asn", 
    "ntap-db/ipv6-country", 
    "ntap-db/tcp-service", 
    "ntap-db/udp-service", 
    "ntap-db/as", 
    "ntap-db/country", 
    "ntap",
]

[workspace.package]
version = "0.7.0"
authors = ["shellrow <shellrow@fortnium.com>"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
bincode = "1.3"
rangemap = "1.5"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
allow-dirty = true
