[package]
name = "ntap"
version = "0.2.0"
edition = "2021"
authors = ["shellrow <shellrow@fortnium.com>"]
description = "Real-time network utilization monitoring tool"
repository = "https://github.com/shellrow/ntap"
homepage = "https://github.com/shellrow/ntap"
documentation = "https://github.com/shellrow/ntap"
readme = "README.md"
keywords = ["network","security","cross-platform"]
categories = ["network-programming"]
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
simplelog = "0.12"
netdev = { version = "0.28", features = ["serde"] }
tokio = { version = "1.35" }
clap = { version = "4.4", features = ["cargo"] }
crossterm = "0.27"
anyhow = "1.0"
argh = "0.1"
rand = "0.8"
color-eyre = "0.6"
palette = "0.7"
ratatui = "0.25"
comfy-table = "7.1"
ntap-core = { path = "../ntap-core", version = "0.2.0" }

[target.'cfg(windows)'.dependencies]
indicatif = "0.16"
inquire = "0.6"
