[package]
name = "ntap"
version.workspace = true
edition = "2021"
authors.workspace = true
description = "Network traffic monitor/analyzer"
repository = "https://github.com/shellrow/ntap"
homepage = "https://github.com/shellrow/ntap"
documentation = "https://github.com/shellrow/ntap"
readme = "../README.md"
keywords = ["network","security","cross-platform"]
categories = ["network-programming"]
license = "MIT"

[dependencies]
serde = { workspace = true }
serde_json = "1"
bincode = { workspace = true }
rangemap = { workspace = true }
log = "0.4"
simplelog = "0.12"
netdev = { version = "0.34", features = ["serde"] }
nex = { version = "0.19", features = ["serde"] }
tokio = { version = "1.38" }
clap = { version = "4.5", features = ["cargo"] }
crossterm = "0.27"
anyhow = "1.0"
rand = "0.8"
#color-eyre = "0.6"
#palette = "0.7"
ratatui = "0.25"
comfy-table = "7.1"
hickory-resolver = { version = "0.24" }
futures = {version = "0.3"}
netsock = { version = "0.3", features = ["serde"] }
reqwest = { version="0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
chrono = { version = "0.4", features = ["serde"] }
time = { version = "0.3", features = ["local-offset"] }
ipnet = "2.11"
ipstruct = "0.2"
home = "0.5"
termtree = "0.5"
indicatif = "0.16"
inquire = "0.6"
ntap-db-as = { path = "../ntap-db/as", version = "0.7.0", default-features = false}
ntap-db-country = { path = "../ntap-db/country", version = "0.7.0", default-features = false }
ntap-db-ipv4-asn = { path = "../ntap-db/ipv4-asn", version = "0.7.0", default-features = false }
ntap-db-ipv4-country = { path = "../ntap-db/ipv4-country", version = "0.7.0", default-features = false }
ntap-db-ipv6-asn = { path = "../ntap-db/ipv6-asn", version = "0.7.0", default-features = false }
ntap-db-ipv6-country = { path = "../ntap-db/ipv6-country", version = "0.7.0", default-features = false }
ntap-db-oui = { path = "../ntap-db/oui", version = "0.7.0", default-features = false }
ntap-db-tcp-service = { path = "../ntap-db/tcp-service", version = "0.7.0", default-features = false }
ntap-db-udp-service = { path = "../ntap-db/udp-service", version = "0.7.0", default-features = false }

[target.'cfg(windows)'.dependencies]
winreg = "0.50"

[features]
default = []
bundle = [
    "ntap-db-as/bundle",
    "ntap-db-as/bundle",
    "ntap-db-country/bundle",
    "ntap-db-ipv4-asn/bundle",
    "ntap-db-ipv4-country/bundle",
    "ntap-db-ipv6-asn/bundle",
    "ntap-db-ipv6-country/bundle",
    "ntap-db-oui/bundle",
    "ntap-db-tcp-service/bundle",
    "ntap-db-udp-service/bundle",
]
