[package]
name = "ntap-db-country"
version = "0.2.0"
edition = "2021"
authors = ["shellrow <shellrow@fortnium.com>"]
repository = "https://github.com/shellrow/ntap"
documentation = "https://github.com/shellrow/ntap"
readme = "README.md"
license = "MIT"
description = "ntap-db-country"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

[features]
default = ["bundle"]
bundle = []
