[package]
name = "ntap-db-ipv4-asn"
version = "0.2.0"
edition = "2021"
authors = ["shellrow <shellrow@fortnium.com>"]
repository = "https://github.com/shellrow/ntap"
documentation = "https://github.com/shellrow/ntap"
readme = "README.md"
license = "MIT"
description = "ntap-db-ipv4-asn"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
rangemap = "1.4"

[features]
default = ["bundle"]
bundle = []
