[package]
name = "ntap-db-ipv6-country"
version = "0.1.0"
edition = "2021"
authors = ["shellrow <shellrow@fortnium.com>"]
repository = "https://github.com/shellrow/ntap"
documentation = "https://github.com/shellrow/ntap"
readme = "README.md"
license = "MIT"
description = "ntap-db-ipv6-country"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
rangemap = "1.4"

[features]
default = ["bundle"]
bundle = []
