[package]
name = "ntap-db-tcp-service"
version = "0.3.0"
edition = "2021"
authors = ["shellrow <shellrow@fortnium.com>"]
repository = "https://github.com/shellrow/ntap"
documentation = "https://github.com/shellrow/ntap"
readme = "README.md"
license = "MIT"
description = "ntap-db-tcp-service"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

[features]
default = ["bundle"]
bundle = []
