[package]
name = "ntap-db-country"
version.workspace = true
edition = "2021"
authors.workspace = true
repository = "https://github.com/shellrow/ntap-db"
documentation = "https://github.com/shellrow/ntap-db"
readme = "README.md"
license = "MIT"
description = "ntap-db-country"

[dependencies]
serde = { workspace = true }
bincode = { workspace = true }

[features]
default = ["bundle"]
bundle = []
